Fixed overflow x on main page and the graphics

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+  /* overflow-x: hidden; */
+}
+html {
   overflow-x: hidden;
 }
-
 body {
   background: #000011;
   overflow-x: hidden;
@@ -915,4 +917,8 @@ Hover Icons Effect
 .btn-outline-pink:hover {
   border-radius: 50px;
   transition: 0.8s;
+}
+
+.imageRect {
+  overflow-x: visible;
 }
